# symtrace

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  LICENSE  Makefile  README.md  SECURITY.md  benchmarks_v4.md  benchmarks_v5.md  build.ps1  build.sh  deny.toml
.cargo/: config.toml
src/: ast_builder.rs  ast_cache.rs  cli.rs  commit_classification.rs  git_layer.rs  incremental_parse.rs  language.rs  main.rs  node_identity.rs  output.rs  refactor_detection.rs  semantic_similarity.rs  symbol_tracking.rs  tree_diff.rs  types.rs
vscode-symtrace/: CHANGELOG.md  README.md  package-lock.json  package.json  vsce.json
vscode-symtrace/src/: binary.ts  commitPicker.ts  config.ts  decorations.ts  extension.ts  gitContentProvider.ts  logger.ts  runner.ts  types.ts
vscode-symtrace/src/treeview/: SymtraceTreeProvider.ts  treeItems.ts
vscode-symtrace/src/webview/: DiffPanel.ts
