[package]
name = "symtrace"
version = "0.1.0"
edition = "2021"
description = "A deterministic semantic diff engine using AST-based structural analysis"
license = "MIT"
repository = "https://github.com/nicktretyakov/symtrace"
readme = "README.md"
keywords = ["git", "diff", "ast", "semantic", "tree-sitter"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "symtrace"
path = "src/main.rs"

[dependencies]
clap = { version = "=4.5.60", features = ["derive"] }
git2 = "=0.19.0"
tree-sitter = "=0.25.10"
tree-sitter-rust = "=0.24.0"
tree-sitter-javascript = "=0.25.0"
tree-sitter-typescript = "=0.23.2"
tree-sitter-python = "=0.25.0"
tree-sitter-java = "=0.23.5"
blake3 = "=1.8.3"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
bincode = "=1.3.3"
anyhow = "=1.0.102"
colored = "=2.2.0"
rayon = "=1.11.0"
lru = "=0.12.5"
bumpalo = { version = "=3.20.2", features = ["collections"] }

[lints.rust]
unsafe_code = "deny"
